# ComplianceQAPipeline

./: .dockerignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
backend/: __init__.py
backend/scripts/: index_documents.py
backend/src/: __init__.py
backend/src/api/: __init__.py
backend/src/graph/: nodes.py  states.py  workflow.py
backend/src/services/: video_indexer.py
frontend/: app.js  index.html  streamlit_app.py  styles.css
