[project]
name = "complianceqapipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "firecrawl-py>=4.30.3",
    "deepgram-sdk>=3.8.0",
    "jsonpatch>=1.33",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.6",
    "langsmith>=0.9.3",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.0.0",
    "supabase>=2.17.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]

[project.optional-dependencies]
audio = [
    "openai-whisper>=20250625",
]